internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string attackTrigger = "attack";
    internal static string camMove = "camMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    public static string rangedAttackTrigger = "rangedAttack";
}   